--- a/src/simtravel/report/rpt_paket_haji.jrxml
+++ b/src/simtravel/report/rpt_paket_haji.jrxml
@@ -293,7 +293,7 @@
 					<textElement>
 						<font fontName="" size="12"/>
 					</textElement>
-				<text><![CDATA[Harga]]></text>
+				<text><![CDATA[Total Harga]]></text>
 				</staticText>
 			</band>
 		</columnHeader>
@@ -412,7 +412,7 @@
 					<textElement>
 						<font fontName="Times-Roman" size="12"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{harga}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{harga_total}]]></textFieldExpression>
 				</textField>
 			</band>
 		</detail>
