--- a/src/simtravel/report/rpt_paket_umrah.jrxml
+++ b/src/simtravel/report/rpt_paket_umrah.jrxml
@@ -412,7 +412,7 @@
 					<textElement>
 						<font fontName="Times-Roman" size="12"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{harga}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{harga_total}]]></textFieldExpression>
 				</textField>
 			</band>
 		</detail>
